feat udistrital/autenticacion_mid#62: Firma reducida
- Se elimina controlador PUT en firma_electronica
